<resources>
    <string name="app_name">Troi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="connect_e4">Connect E4</string>
    <string name="status_e4_not_connected">Empatica E4: Not connected</string>
    <string name="status_e4_search_device">Empatica E4: searching for a device</string>
    <string name="status_e4_already_sesarching">Empatica E4: Error Connecting: Scan failed: a BLE scan with the same settings is already started by the app</string>
    <string name="status_e4_registration">Empatica E4: Scan failed: app cannot be registered</string>
    <string name="status_e4_power_error">Empatica E4: Scan failed: power optimized scan feature is not supported</string>
    <string name="status_e4_internal_error">Empatica E4: Scan failed: internal error</string>
    <string name="status_e4_other_error">Empatica E4: Scan failed with unknown error</string>
    <string name="status_e4_connected">Empatica E4: Connected</string>
    <string name="status_e4_connecting">Empatica E4: Connecting to the device</string>
    <string name="e4_ready">E4: Ready</string>
    <string name="e4_initial">E4: Initial</string>
    <string name="e4_disconnected">E4: Disconnected</string>
    <string name="e4_connecting">E4: Connecting</string>
    <string name="e4_connected">E4: Connected</string>
    <string name="e4_disconnecting">E4: Disconnecting</string>
    <string name="e4_discovering">E4: Discovering</string>
    <string name="make_prediction">Make a Prediction</string>
    <string name="e4_scan">Scanning for E4....</string>
    <string name="e4_established">E4: Established bluetooth channel</string>
    <string name="status">Status</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="self_report">Self Report</string>
    <string name="self_report_title">How Do You Feel Now?</string>
    <string name="emo_cheerful">Cheerful 🤗</string>
    <string name="emo_happy">Happy 😊</string>
    <string name="emo_angry">Angry 👿</string>
    <string name="emo_nervous">Nervous 😰</string>
    <string name="emo_sad">Sad 😥</string>
    <string name="emo_neutral">Neutral 😐</string>
    <string name="emo_non">None of Above</string>
    <string name="submit_report">Submit Report</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shared_preference">troi_shared_preference</string>
    <string name="key_pid">participant_id</string>
    <string name="enter_participant_id">Enter Participant ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm">Confirm</string>
    <string name="arousal">Arousal</string>
    <string name="valence">Valence</string>
    <string name="agreement_title">The system thinks your emotional state is:</string>
    <string name="agreeable_question">To what degree do you agree on this prediction?</string>
    <string name="confidence_question">How confident were you with your judgment?</string>
    <string name="enter_how_you_feel_optional">Enter how you feel (optional)</string>
    <string name="any_comment_optional">Any further comment (Optional)</string>
    <string name="key_self_category">SELF_CATEGORY</string>
    <string name="key_self_category_custom">SELF_CATEGORY_CUSTOM</string>
    <string name="key_self_report_mode">SELF_MODE</string>
    <string name="key_self_arousal">SELF_AROUSAL</string>
    <string name="key_self_valence">SELF_VALENCE</string>
    <string name="key_predicted_category">PREDICTED_CATEGORY</string>
    <string name="key_pred_arousal">PREDICTED_AROUSAL</string>
    <string name="key_pred_valence">PREDICTED_VALENCE</string>
    <string name="key_pred_mode">PRED_MODE</string>
    <string name="key_agree">AGREE</string>
    <string name="key_confidence">CONFIDENCE</string>
    <string name="key_comment">COMMENT</string>
    <string name="as_low_arousal">😴</string>
    <string name="as_high_arousal">😳</string>
    <string name="as_positive_valence">😀</string>
    <string name="as_negative_valence">😞</string>
    <string name="as_neutral">😐</string>
    <string name="exit">Exit</string>
    <string name="affective_scale">affective scale</string>
    <string name="totally_agree">Totally\nAgree</string>
    <string name="totally_disagree">Totally\nDisagree</string>
    <string name="unconfident">Unconfident</string>
    <string name="very_confident">Very\nConfident</string>
    <string name="record_audio">Record audio</string>
    <string name="dummy_text">The quick brown fox jumps over the lazy dog</string>
    <string name="title_activity_speech_input">SpeechInputActivity</string>
    <string name="instruction_speech_input">Press the record button and read the following sentence. Once recording is finished press the stop button.</string>
</resources>
