<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ratemodel.SystemPredictionActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/agreement_title"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/system_result_fragment"
        android:name="org.ahlab.troi.ui.ratemodel.CategoricalResultsFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/agreeable_question"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linear2" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_weight="0"
            android:text="@string/totally_disagree"
            android:textAlignment="center"
            android:textStyle="italic" />

        <com.google.android.material.slider.Slider
            android:id="@+id/seek_agreeable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:stepSize="1"
            android:value="5"
            android:valueFrom="0"
            android:valueTo="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_weight="0"
            android:text="@string/totally_agree"
            android:textAlignment="center"
            android:textStyle="italic" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/confidence_question"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linear1" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/system_predict_comment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_weight="0"
            android:text="@string/unconfident"
            android:textAlignment="center"
            android:textStyle="italic" />

        <com.google.android.material.slider.Slider
            android:id="@+id/seek_confidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:stepSize="1"
            android:value="5"

            android:valueFrom="0"
            android:valueTo="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_weight="0"
            android:text="@string/very_confident"
            android:textAlignment="center"
            android:textStyle="italic" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/system_predict_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="20dp"

        android:hint="@string/any_comment_optional"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit_feedback">

    </com.google.android.material.textfield.TextInputEditText>

    <Button
        android:id="@+id/btn_submit_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_report"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>