<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NPSelfReportFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/self_report_title"
        android:textSize="24sp"
        android:layout_weight="0"
/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:layout_weight="5">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/arousal"
                android:textSize="20sp"
               android:layout_gravity="center"/>
            <RadioGroup
                android:id="@+id/rg_arousal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/btn_submit_report"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_weight="2"
                >

                <RadioButton
                    android:id="@+id/r_arousal_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_arousal_0"
                    android:padding="4dp"
                    app:layout_constraintEnd_toStartOf="@+id/r_arousal_1"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>

                <RadioButton
                    android:id="@+id/r_arousal_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_arousal_1"
                    android:padding="4dp"
                    app:layout_constraintEnd_toStartOf="@+id/r_arousal_2"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>

                <RadioButton
                    android:id="@+id/r_arousal_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_arousal_2"
                    android:padding="4dp"
                    app:layout_constraintEnd_toStartOf="@+id/r_arousal_3"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:checked="true"/>



                <RadioButton
                    android:id="@+id/r_arousal_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_arousal_3"
                    android:padding="4dp"
                    app:layout_constraintEnd_toStartOf="@+id/r_arousal_4"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    />

                <RadioButton
                    android:id="@+id/r_arousal_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_arousal_4"
                    android:padding="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>



            </RadioGroup>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/valence"
                android:textSize="20sp" android:layout_gravity="center"/>

            <RadioGroup
                android:id="@+id/rg_valence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <RadioButton
                    android:id="@+id/r_valence_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_valence_0"
                    android:padding="4dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>

                <RadioButton
                    android:id="@+id/r_valence_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_valence_1"
                    android:padding="4dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>

                <RadioButton
                    android:id="@+id/r_valence_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_valence_2"
                    android:padding="4dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/r_valence_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_valence_3"
                    android:padding="4dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>

                <RadioButton
                    android:id="@+id/r_valence_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_valence_4"
                    android:padding="4dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>





            </RadioGroup>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>




    <Button
        android:id="@+id/btn_submit_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_report"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:layout_marginBottom="20dp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>